<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculations"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/graph" />
    </group>

    <item android:title="@string/additional">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/clear_history" />
        </menu>
    </item>

</menu>
